@@ -1,3 +1,7 @@
+2008-12-11  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added new column to the records indexing to allow recording "Last modified" time for records
+
 2008-12-10  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Updated manual with the information about TYPO3SEARCH_xxx and more advanced https:// indexing
